--- a/notebooks/unit1_dummy-agent.ipynb
+++ b/notebooks/unit1_dummy-agent.ipynb
@@ -530,7 +530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "huggingface-agent-course-py3.11",
    "language": "python",
    "name": "python3"
   },
